--- a/Tony.html
+++ b/Tony.html
@@ -13,7 +13,7 @@
 
   <section class="row">
         <div class="col-4" >
-           <img src="IMG-4582.JPG" alt="myself" class="img-fluid ">
+           <img src="Tony.jpeg" alt="myself" class="img-fluid ">
            <p>
             <div class="c">CONTACT</div>
            </p>
