--- a/Adroit Internship 2022/Comfort-Anim.html
+++ b/Adroit Internship 2022/Comfort-Anim.html
@@ -353,7 +353,7 @@ hr{
                         <p>I am a well-groomed and a presentable person. My main priority is to work hard for the achievement of every organization's potential.</p>
                     
                     <h2><i class="fa fa-book" style="font-size:20px"></i> MISSION STATEMENT</h2>
-                        <P>To connect the world's professionals to make them more prodective and successful.</P>
+                        <P>To connect the world's professionals to make them more productive and successful.</P>
                     
                      <div class="work">
                         <h2><i class="fa fa-university" style="font-size:20px"></i>WORK EXPERIENCE</h2>
