--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
                   <tr >
                       <th scope="row">12</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
+                          <a href="../Adroit" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">13</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Gaius Kumson</a>
+                          <a href="../Adroit-Bureau/GAIUS-KUMSON.html" target="_blank" rel="noopener noreferrer">Gaius Kumson</a>
                       </td>
                   </tr>
   
@@ -240,21 +240,21 @@
                   <tr >
                       <th scope="row">15</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Godfred Frimpong</a>
+                          <a href="../Adroit-Bureau/Godfred.html" target="_blank" rel="noopener noreferrer">Godfred Frimpong</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">16</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Happy Ametepe</a>
+                          <a href="../" target="_blank" rel="noopener noreferrer">Happy Ametepe</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">17</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Irene Sogbe Mawufemo</a>
+                          <a href="../Adroit-Bureau/irene mawufemo sogbe.html" target="_blank" rel="noopener noreferrer">Irene Sogbe Mawufemo</a>
                       </td>
                   </tr>
   
@@ -275,21 +275,21 @@
                   <tr >
                       <th scope="row">20</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Joycelyn Ofosua Aboagye-Eck</a>
+                          <a href="../Adroit-Bureau/Joycelyn.html" target="_blank" rel="noopener noreferrer">Joycelyn Ofosua Aboagye-Eck</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">21</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Martha Mawusi Allotey</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Martha Mawusi Allotey</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">22</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Mary Nkrumah</a>
+                          <a href="../Adroit-Bureau/Mary.html" target="_blank" rel="noopener noreferrer">Mary Nkrumah</a>
                       </td>
                   </tr>
   
@@ -310,20 +310,20 @@
                   <tr >
                       <th scope="row">25</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Rita Asamoah</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Rita Asamoah</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">26</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Rockson Agamaku</a>
+                          <a href="../Adroit-Bureau/Rockson.html" target="_blank" rel="noopener noreferrer">Rockson Agamaku</a>
                       </td>
                   </tr>
                   <tr>
                       <th scope="row">27</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Tony Potakey</a>
+                          <a href="../Adroit-Bureau/Tony.html" target="_blank" rel="noopener noreferrer">Tony Potakey</a>
                       </td>
                   </tr>
   
@@ -411,15 +411,6 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Enterprise Resource Planning systems</a></li>
             </ul>
           </div>
 
