--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <!-- <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -77,7 +77,7 @@
    
 
     <!-- ======= Counts Section ======= -->
-      <section id="counts" class="counts">
+      <!-- <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -212,21 +212,21 @@
                   <tr >
                       <th scope="row">11</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">12</th>
                       <td>
-                          <a href="../Adroit" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
+                          <a href="Fekix Yankey.html" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">13</th>
                       <td>
-                          <a href="../Adroit-Bureau/GAIUS-KUMSON.html" target="_blank" rel="noopener noreferrer">Gaius Kumson</a>
+                          <a href="GAIUS-KUMSON.html" target="_blank" rel="noopener noreferrer">Gaius Kumson</a>
                       </td>
                   </tr>
   
@@ -240,7 +240,7 @@
                   <tr >
                       <th scope="row">15</th>
                       <td>
-                          <a href="../Adroit-Bureau/Godfred.html" target="_blank" rel="noopener noreferrer">Godfred Frimpong</a>
+                          <a href="Godfred.html" target="_blank" rel="noopener noreferrer">Godfred Frimpong</a>
                       </td>
                   </tr>
   
@@ -254,7 +254,7 @@
                   <tr >
                       <th scope="row">17</th>
                       <td>
-                          <a href="../Adroit-Bureau/irene mawufemo sogbe.html" target="_blank" rel="noopener noreferrer">Irene Sogbe Mawufemo</a>
+                          <a href="irene mawufemo sogbe.html" target="_blank" rel="noopener noreferrer">Irene Sogbe Mawufemo</a>
                       </td>
                   </tr>
   
@@ -275,7 +275,7 @@
                   <tr >
                       <th scope="row">20</th>
                       <td>
-                          <a href="../Adroit-Bureau/Joycelyn.html" target="_blank" rel="noopener noreferrer">Joycelyn Ofosua Aboagye-Eck</a>
+                          <a href="Joycelyn.html" target="_blank" rel="noopener noreferrer">Joycelyn Ofosua Aboagye-Eck</a>
                       </td>
                   </tr>
   
@@ -289,7 +289,7 @@
                   <tr >
                       <th scope="row">22</th>
                       <td>
-                          <a href="../Adroit-Bureau/Mary.html" target="_blank" rel="noopener noreferrer">Mary Nkrumah</a>
+                          <a href="Mary.html" target="_blank" rel="noopener noreferrer">Mary Nkrumah</a>
                       </td>
                   </tr>
   
@@ -317,13 +317,13 @@
                   <tr >
                       <th scope="row">26</th>
                       <td>
-                          <a href="../Adroit-Bureau/Rockson.html" target="_blank" rel="noopener noreferrer">Rockson Agamaku</a>
+                          <a href="Rockson.html" target="_blank" rel="noopener noreferrer">Rockson Agamaku</a>
                       </td>
                   </tr>
                   <tr>
                       <th scope="row">27</th>
                       <td>
-                          <a href="../Adroit-Bureau/Tony.html" target="_blank" rel="noopener noreferrer">Tony Potakey</a>
+                          <a href="Tony.html" target="_blank" rel="noopener noreferrer">Tony Potakey</a>
                       </td>
                   </tr>
   
