--- a/Fekix Yankey.html
+++ b/Fekix Yankey.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="with=device-width,initial-scale=1.0">
         <title>CURRICULUM VITAE (CV)|Felix Yankey</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="assets/css/Felix Yankey.css" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -13,7 +13,7 @@
         <div class="content">
             <div class="identity">
                 <div class="contact">
-                    <img src="IMG/photo_2022-07-03_10-06-22.jpg">
+                    <img src="assets/img/Felix Yankey.jpg">
                     <h2>CONTACT DETAILS</h2>
                     <div class="underline"></div>
                     <p>
