--- a/GAIUS-KUMSON.html
+++ b/GAIUS-KUMSON.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="../GAIUS-KUMSON.css">
+        <link rel="stylesheet" href="assets/css/GAIUS-KUMSON.css">
         <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
         <title>CV</title>
     </head>
@@ -13,7 +13,7 @@
         <main>
             <section class="left">
                 <div class="left-image">
-                    <img src="../GAIUS-KUMSON.jpg" alt="image">
+                    <img src="assets/img/GAIUS-KUMSON.jpg" alt="image">
                     </div>
                     <h2 class="contact">CONTACT</h2>
                     <div class="personal">
