--- a/Barikisu.html
+++ b/Barikisu.html
@@ -7,14 +7,14 @@
     <title>CV</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/Barikisu.css">
 </head>
 <body>
     <div class="container">
         <div class="left-side">
         <div class="profileText">
             <div class="ImgBx">
-                <img src="C:\Users\kisu\OneDrive\Desktop\photos\WhatsApp Image 2022-04-26 at 9.46.46 AM (1).jpeg">
+                <img src="assets/img/kisu.jpeg">
             </div>
             <h2>BARIKISU EKUA DAUWUDA SEIDU<br><span>Adroit Bureau Intern</span></h2>
         </div>
