--- a/Comfort-Anim.html
+++ b/Comfort-Anim.html
@@ -305,7 +305,7 @@ hr{
         <div class="content">
             <div class="identity">
                 <div class="contact">
-                    <img src="C:\Users\amaconnie\Downloads\Telegram Desktop\photo_2022-10-14_20-06-21.jpg">
+                    <img src="assets/img/Comfort Anim.jpg">
                     <h2>CONTACT DETAILS</h2>
                     <div class="underline"></div>
                     <p><i class="fa fa-phone-square" style="font-size:15px;color:rgb(49, 49, 202)">Telephone:</i>      +233 556 995 266 </p>
