--- a/Ehud Adjei Yankey.html
+++ b/Ehud Adjei Yankey.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV|Ehud Adjei Yankey</title>
-    <link rel="stylesheet" href="Ehud Adjei Yankey.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/Ehud Adjei Yankey.css" type="text/css">
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -24,7 +24,7 @@
     <div class="content">
         <div class="identity">
             <div class="contact">
-                <img src="../Resume project/Ehud Adjei Yankey.jpg">
+                <img src="assets/img/Ehud Adjei Yankey.jpg">
                 <h2>CONTACT</h2>
                 <div class="underline"></div>
                 
