--- a/Emmanuella.html
+++ b/Emmanuella.html
@@ -13,14 +13,14 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/Emmanuella.css" />
   </head>
   <body>
     <div class="container">
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src="C:\Users\annan e\Desktop\New folder (2)\20220917_183048.jpg" />
+            <img src="assets/img/Emmanuella.jpg"/>
           </div>
           <h2>ANNAN EMMANUELLA<br /><span>Beautician</span></h2>
         </div>
