--- a/Godfred.html
+++ b/Godfred.html
@@ -13,14 +13,14 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/Godfred.css" />
   </head>
   <body>
     <div class="container">
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src="C:\Users\GREAT89\Pictures\Saved Pictures\ty85.jpg" />
+            <img src="assets/img/">
           </div>
           <h2>FRIMPONG GODFRED<br /><span>Adroit Intern</span></h2>
         </div>
