--- a/Joycelyn.html
+++ b/Joycelyn.html
@@ -13,14 +13,14 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/Joycelyn.css" />
   </head>
   <body>
     <div class="container">
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src="C:\Users\joycelyn eck\Pictures\DCIM\100APPLE\IMG_8888.JPG" alt="">
+            <img src="assets/img/Joycelyn.JPG" alt="">
           </div>
           <h2>JOYCELYN ECK<br /><span>ADROIT INTERN</span></h2>
         </div>
