--- a/TabithaOwusuAppiah.html
+++ b/TabithaOwusuAppiah.html
@@ -305,7 +305,7 @@ hr{
         <div class="content">
             <div class="identity">
                 <div class="contact">
-                    <img src="C:\Users\Tabitha Owusu Appiah\Downloads\Tabitha..jpeg">
+                    <img src="assets/img/Tabitha..jpeg">
                     <h2>CONTACT DETAILS</h2>
                     <div class="underline"></div>
                     <p><i class="fa fa-phone-square" style="font-size:15px;color:rgb(49, 49, 202)">Telephone:</i>      +233 595 671 977</p>
