--- a/Tony.html
+++ b/Tony.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/Tony.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 
   <section class="row">
         <div class="col-4" >
-           <img src="Tony.jpeg" alt="myself" class="img-fluid ">
+           <img src="assets/img/Tony.jpeg" alt="myself" class="img-fluid ">
            <p>
             <div class="c">CONTACT</div>
            </p>
