--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
                   <tr >
                       <th scope="row">1</th>
                   <td>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Tabitha Appiah Owusu</a>
+                    <a href="TabithaOwusuAppiah.html" target="_blank" rel="noopener noreferrer">Tabitha Appiah Owusu</a>
                     </td>
                   </tr>
       
                   <tr >
                       <th scope="row">2</th>
-                      <td><a href="#" target="_blank" rel="noopener noreferrer">Barikisu Ekua Dawuda Seidu</a></td>
+                      <td><a href="Barikisu.html" target="_blank" rel="noopener noreferrer">Barikisu Ekua Dawuda Seidu</a></td>
                       
                   </tr>
   
@@ -163,14 +163,14 @@
                   <tr >
                       <th scope="row">4</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Charity Mensah</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Charity Mensah</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">5</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Comfort Anim</a>
+                          <a href="Comfort-Anim.html" target="_blank" rel="noopener noreferrer">Comfort Anim</a>
                       </td>
                   </tr>
   
@@ -184,28 +184,28 @@
                   <tr >
                       <th scope="row">7</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Ehud Adjei Yankey</a>
+                          <a href="Ehud Adjei Yankey.html" target="_blank" rel="noopener noreferrer">Ehud Adjei Yankey</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">8</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Ennanuella Annan</a>
+                          <a href="Emmanuella.html" target="_blank" rel="noopener noreferrer">Emmanuella Annan</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">9</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Erica Eyram Konu</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Erica Eyram Konu</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">10</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Felicity Perpetual Quaicoo</a>
+                          <a href="" target="_blank" rel="noopener noreferrer">Felicity Perpetual Quaicoo</a>
                       </td>
                   </tr>
   
