--- a/irene mawufemo sogbe.html
+++ b/irene mawufemo sogbe.html
@@ -305,7 +305,7 @@ hr{
         <div class="content">
             <div class="identity">
                 <div class="contact">
-                    <img src="C:\Users\irene mawufemo sogbe\Downloads\irene.jpeg">
+                    <img src="assets/img/irene.jpeg">
                     <h2>CONTACT DETAILS</h2>
                     <div class="underline"></div>
                     <p><i class="fa fa-phone" style="font-size:15px; color:rgb(28, 28, 189)"></i>Telephone:         +233 552637696</p>
