--- a/Mary.html
+++ b/Mary.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV|NKRUMAH MARY</title>
-    <link rel="stylesheet" href="../CSS/styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/Mary.css" type="text/css">
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -25,7 +25,7 @@
     <div class="content">
         <div class="identity">
             <div class="contact">
-                <img src="../IMG/VBQM5991.JPG">
+                <img src="assets/img/Mary.JPG">
                 <h2>CONTACT</h2>
                 <div class="underline"></div>
                 
