--- a/Rockson.html
+++ b/Rockson.html
@@ -9,7 +9,7 @@
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="assets/css/">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="left-side">
 
       <div class="profile">
-        <img class="profile-pic" src="./img/IMG_6891.jpg" height="160" width="160" />
+        <img class="profile-pic" src="assets/img/Rockson.jpg" height="160" width="160" />
 
       </div>
 
