changes to rockson.css

--- a/Bernice Darko.html
+++ b/Bernice Darko.html
@@ -20,7 +20,7 @@
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src= "C:\Users\BERNICE EKUA DARKO\Desktop\CV.jpg">
+            <img src= "assets/img/Bernice Darko.jpg">
           </div>
           <h2>BERNICE EKUA DARKO<br /><span>Team Leader</span></h2>
         </div>
