--- a/Godfred.html
+++ b/Godfred.html
@@ -20,7 +20,7 @@
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src="assets/img/">
+            <img src="assets/img/ty85.jpg">
           </div>
           <h2>FRIMPONG GODFRED<br /><span>Adroit Intern</span></h2>
         </div>
