--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                   <tr >
                       <th scope="row">11</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
+                          <a href="../Adroit-Bure" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">12</th>
                       <td>
-                          <a href="Fekix Yankey.html" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
+                          <a href="../Adroit-Bureau/Barikisu.html" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
                       </td>
                   </tr>
   
@@ -247,7 +247,7 @@
                   <tr >
                       <th scope="row">16</th>
                       <td>
-                          <a href="../" target="_blank" rel="noopener noreferrer">Happy Ametepe</a>
+                          <a href="./Happy.html" target="_blank" rel="noopener noreferrer">Happy Ametepe</a>
                       </td>
                   </tr>
   
