--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <tr >
                       <th scope="row">3</th>
                       <td>
-                          <a href="#" target="_blank" rel="noopener noreferrer">Bernice Ekua Darko</a>
+                          <a href="Bernice Darko.html" target="_blank" rel="noopener noreferrer">Bernice Ekua Darko</a>
                       </td>
                   </tr>
   
@@ -198,7 +198,7 @@
                   <tr >
                       <th scope="row">9</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Erica Eyram Konu</a>
+                          <a href="Erica.html" target="_blank" rel="noopener noreferrer">Erica Eyram Konu</a>
                       </td>
                   </tr>
   
@@ -212,7 +212,7 @@
                   <tr >
                       <th scope="row">11</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
+                          <a href="fqbaidoo.html" target="_blank" rel="noopener noreferrer">Felix Quaicoe Baidoo</a>
                       </td>
                   </tr>
   
