--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   <tr >
                       <th scope="row">12</th>
                       <td>
-                          <a href="../Adroit-Bureau/Barikisu.html" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
+                          <a href="Fekix Yankey.html" target="_blank" rel="noopener noreferrer">Felix Yankey</a>
                       </td>
                   </tr>
   
@@ -233,7 +233,7 @@
                   <tr >
                       <th scope="row">14</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Genevieve Doodegoe Kuutugbee</a>
+                          <a href="GEVEVIEVE CV USING HTML AND CSS.html" target="_blank" rel="noopener noreferrer">Genevieve Doodegoe Kuutugbee</a>
                       </td>
                   </tr>
   
@@ -261,14 +261,14 @@
                   <tr >
                       <th scope="row">18</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Josephine Quansah Yaotse</a>
+                          <a href="Josephine.html" target="_blank" rel="noopener noreferrer">Josephine Quansah Yaotse</a>
                       </td>
                   </tr>
   
                   <tr >
                       <th scope="row">19</th>
                       <td>
-                          <a href="http://" target="_blank" rel="noopener noreferrer">Joshua Ntow Opare-Boateng</a>
+                          <a href="Joshua.html" target="_blank" rel="noopener noreferrer">Joshua Ntow Opare-Boateng</a>
                       </td>
                   </tr>
   
@@ -282,7 +282,7 @@
                   <tr >
                       <th scope="row">21</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Martha Mawusi Allotey</a>
+                          <a href="Martha Allotey.html" target="_blank" rel="noopener noreferrer">Martha Mawusi Allotey</a>
                       </td>
                   </tr>
   
@@ -293,24 +293,24 @@
                       </td>
                   </tr>
   
-                  <tr >
+                  <!-- <tr >
                       <th scope="row">23</th>
                       <td>
                          <a href="http://" target="_blank" rel="noopener noreferrer">Michael Nartey Tawiah</a> 
                       </td>
-                  </tr>
+                  </tr> -->
   
-                  <tr >
+                  <!-- <tr >
                       <th scope="row">24</th>
                       <td>
                           <a href="http://" target="_blank" rel="noopener noreferrer">Regina Sarpomaa</a>
                       </td>
-                  </tr>
+                  </tr> -->
   
                   <tr >
                       <th scope="row">25</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Rita Asamoah</a>
+                          <a href="Rita Asamoah.html" target="_blank" rel="noopener noreferrer">Rita Asamoah</a>
                       </td>
                   </tr>
   
