--- a/Bernice Darko.html
+++ b/Bernice Darko.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/Bernice Darko.css" />
   </head>
   <body>
     <div class="container">
