--- a/Josephine.html
+++ b/Josephine.html
@@ -9,7 +9,7 @@
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Josephine</title>
-  <link rel="stylesheet" href="../Adroit Internship 2022/assets/css/Josephine.CSS.css">
+  <link rel="stylesheet" href="./assets/css/Josephine.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="left-side">
 
       <div class="profile">
-        <img class="profile-pic" src="../Adroit Internship 2022/assets/img/Josephine.jpg" height="160" width="160" />
+        <img class="profile-pic" src="./assets/img/Josephine.jpg" height="160" width="160" />
 
       </div>
 
