--- a/Joshua.html
+++ b/Joshua.html
@@ -20,7 +20,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title>Resume</title>
+    <title>Joshua Ntow Opare-Boateng</title>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
 
         <div id="image" class="mb-3 py-3">
           <img
-            src="../img/photo_2022-11-01_09-20-37 (3).jpg"
+            src="./assets/img/Joshua.jpg"
             class="img-fluid rounded-circle responsive"
             alt="image"
           />
@@ -78,13 +78,13 @@
 
           <li class="media-icons mb-3 py-1">
             <a href="tel:+233551856093" target="_blank">
-              <i class="fa fa-phone responsive"></i> +233551856093
+              <i class="fa fa-phone responsive"></i> +233 551 856 093
             </a>
           </li>
 
           <li class="media-icons mb-3 py-1">
             <a href="#">
-              <i class="fa fa-map-marker"></i> Sahara-Dansoman,Accra
+              <i class="fa fa-map-marker"></i> Sahara-Dansoman, Accra
             </a>
           </li>
         </div>
@@ -301,7 +301,7 @@
         <div id="work-exp" class="py-4">
           <h2 class="text-primary">
             <i class="fa fa-desktop"></i>
-            WORK EXPERIENCE
+           <u>WORK EXPERIENCE</u> 
           </h2>
 
           <ul id="llcthegram">
@@ -380,7 +380,7 @@
         <div id="education" class="">
           <h2 class="text-primary">
             <i class="fa fa-graduation-cap"></i>
-            EDUCATION
+           <u>EDUCATION</u> 
           </h2>
 
           <!--HIGH SCHOOL-->
