--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Adroit Bureau Bootstrap Template - Index</title>
+  <title>Adroit Bureau</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
