--- a/index.html
+++ b/index.html
@@ -332,7 +332,195 @@
           </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>
+    <!-- End Team Section -->
+
+    <!-- ===== Gallery Section ===== -->
+    <section id="gallery" class="gallery section-bg">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Gallery</h2>
+          <h3>Interns at work</h3>
+        </div>
+      
+
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+  
+          <div class="row justify-content-center">
+  
+            <div class="col-lg-8">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+  
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (1).jpg" alt="Felix and Joshua">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (2).jpg" alt="">
+                  </div> 
+  
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (3).jpg" alt="">
+                  </div> -->
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (4).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (5).jpg" alt="Planning and plotting">
+                  </div>
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (6).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (7).jpg" alt="">
+                  </div>
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (8).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (9).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (10).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (11).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (12).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (13).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (14).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (15).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (16).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (17).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (18).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (19).jpg" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (20).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (21).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (22).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (23).jpg" alt="">
+                  </div>
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (23).jpg" alt="">
+                  </div> -->
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (24).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (25).jpg" alt="">
+                  </div>
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (26).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (27).jpg" alt="">
+                  </div> -->
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (28).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (29).jpg" alt="">
+                  </div>
+
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (30).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (31).jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (32).jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (33).jpg" alt="">
+                  </div>
+
+                  <!-- <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (34).jpg" alt="">
+                  </div> -->
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (35).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (36).jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/gallery/intern (37).jpg" alt="">
+                  </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+  
+            
+  
+          </div>
+  
+        </div>
+      </section>
+
+  
+      </div>
+      </div>
+    </section>
+    <!-- ====== End Gallery Section ===== -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
