--- a/Godfred.html
+++ b/Godfred.html
@@ -104,7 +104,7 @@
         <div class="about">
           <h2 class="title2"><i class="fa-solid fa-user"></i>Profile</h2>
           <p>
-            I am an ardent young man with great passion for success in my career
+            I’m a high-potential and high-achiever. I’m a fast learner and a motivated worker. I enjoy working autonomously and always produce the best possible work. I take on challenges head-on, challenge them first and then implement the solution. I am always able to make quick decisions in emergency situations.
           </p>
         </div>
         <div class="about">
@@ -119,10 +119,10 @@
             <div class="text">
               <h4>System Administator</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nesciunt sit nihil consequuntur laboriosam nisi eum, minima
-                tenetur quasi magnam debitis, ad exercitationem dignissimos
-                obcaecati ducimus et repellendus ea optio sunt!
+                
+                I interned at Adroit Bureau as a system administrator making sure the systems at my duty area were working  perfectly.
+               Through the process i gained knowledge on networking and responding effectively to error messages.
+               
               </p>
             </div>
           </div>
@@ -135,10 +135,8 @@
             <div class="text">
               <h4>Financier</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nesciunt sit nihil consequuntur laboriosam nisi eum, minima
-                tenetur quasi magnam debitis, ad exercitationem dignissimos
-                obcaecati ducimus et repellendus ea optio sunt!
+                I worked with Graham mining Company as their financial secretary.During the tenure of my service I was able to adrress a financial blunder in the 
+                firm.Their profit increased significantly with my effort, in addition we were able to recover from a particular debt which was swallowing the company.
               </p>
             </div>
           </div>
