--- a/Martha Allotey.html
+++ b/Martha Allotey.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="martha.css" />
   </head>
   <body>
     <div class="container">
