--- a/Tony.html
+++ b/Tony.html
@@ -7,14 +7,14 @@
     <title>CV</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="Tony.css">
+    <link rel="stylesheet" href="assets/css/Tony.css">
 </head>
 <body>
     <div class="container">
      <div class="left-side">
         <div class="profileText">
             <div class="ImgBx">
-                <img src="Tony.jpeg">
+                <img src="assets/img/Tony.jpeg">
             </div>
             <h2>TONY POTAKEY ENYONAM<br><span>Adroit Bureau Associate</span></h2>
         </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="text">
                         <h4> REVENUE OFFICER</h4>
-                        <P>GA NORTH MUNIIIPAL ASSEMBLY</P>
+                        <P>GA NORTH MUNICIPAL ASSEMBLY</P>
                         <P><a href="http://gnma.gov.gh/"target='_blank'>Ga North Municipal Assembly</a></P>
                         <li>Registartion of business in the assembly unto the digital platform</li>
                         <li>Collection and processing of revenue for the assembly</li>
