--- a/Godfred.html
+++ b/Godfred.html
@@ -29,7 +29,7 @@
           <ul>
             <li>
               <span class="icon"><i class="fa-solid fa-phone"></i></span>
-              <span class="text">+233 592 250 6969</span>
+              <span class="text">+233 592 506 969</span>
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
@@ -41,7 +41,7 @@
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-globe"></i></span>
-              <span class="text">my.website.com</span>
+              <span class="text">WWW.kudu.com</span>
             </li>
             <li>
               <span class="icon"
