--- a/Martha Allotey.html
+++ b/Martha Allotey.html
@@ -20,7 +20,7 @@
       <div class="left-side">
         <div class="profileText">
           <div class="ImgBx">
-            <img src="C:\Users\MARTHA ALLOTEY\Pictures\mm2.jpeg" alt="">
+            <img src="assets/img/Martha.jpeg" alt="Martha Allotey">
           </div>
           <h2>MARTHA ALLOTEY<br /><span>Adroit Intern</span></h2>
         </div>
