--- a/fqbaidoo.html
+++ b/fqbaidoo.html
@@ -293,7 +293,7 @@
         <div class="left_side">
             <div class="profiletext">
                 <div class="imgbx">
-                    <img src="fqbaidoo.jpg">
+                    <img src="assets/img/fqbaidoo.jpg">
                 </div>
                 <h2>FELIX QUACOE BAIDOO<br><span>Intern-Adroit Bureau</span></h2>
             </div>
@@ -413,22 +413,27 @@
                     <h4>Html</h4>
                     <div class="percent"><div style="width: 88%;"></div></div>
                 </div>
+
                 <div class="box">
                     <h4>CSS</h4>
                     <div class="percent"><div style="width: 75%;"></div></div>
                 </div>
+
                 <div class="box">
                     <h4>SQL</h4>
                     <div class="percent"><div style="width: 40%;"></div></div>
                 </div>
+                
                 <div class="box">
                     <h4>GitHub</h4>
                     <div class="percent"><div style="width: 20%;"></div></div>
                 </div>
+
                 <div class="box">
                     <h4>Teamwork</h4>
                     <div class="percent"><div style="width: 93%;"></div></div>
                 </div>
+
                 <div class="box">
                     <h4>Leadership</h4>
                     <div class="percent"><div style="width: 74%;"></div></div>
