--- a/Joshua.html
+++ b/Joshua.html
@@ -281,7 +281,7 @@
         <div id="profile" class="py-3">
           <h2 class="text-primary">
             <i class="fas fa-user-alt"></i>
-            PROFILE
+            <u>PROFILE</u>
           </h2>
           <h5>
             I am a self-driven and motivated creative web developer dedicated to
@@ -301,7 +301,7 @@
         <div id="work-exp" class="py-4">
           <h2 class="text-primary">
             <i class="fa fa-desktop"></i>
-           <u>WORK EXPERIENCE</u> 
+            <u>WORK EXPERIENCE</u>
           </h2>
 
           <ul id="llcthegram">
@@ -380,7 +380,7 @@
         <div id="education" class="">
           <h2 class="text-primary">
             <i class="fa fa-graduation-cap"></i>
-           <u>EDUCATION</u> 
+            <u>EDUCATION</u>
           </h2>
 
           <!--HIGH SCHOOL-->
