--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                   <tr >
                       <th scope="row">10</th>
                       <td>
-                          <a href="" target="_blank" rel="noopener noreferrer">Felicity Perpetual Quaicoo</a>
+                          <a href="felicity.html" target="_blank" rel="noopener noreferrer">Felicity Perpetual Quaicoo</a>
                       </td>
                   </tr>
   
@@ -353,7 +353,7 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
   
-                  <div class="swiper-slide">
+                  <div class="swiper-slide image wrapper">
                     <img src="assets/img/gallery/intern (1).jpg" alt="Felix and Joshua">
                   </div>
   
